myapps/myapp-canary/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: myapp-canary
spec:
  replicas: 6
  selector:
    matchLabels:
      app: myapp-canary
  template:
    metadata:
      labels:
        app: myapp-canary
    spec:
      containers:
        - name: app-container
          image: argoproj/rollouts-demo:red
          ports:
            - containerPort: 8080
  strategy:
    canary:
      stableService: svc-stable
      canaryService: svc-canary
      trafficRouting:
        nginx:
          stableIngress: ingress-stable
      steps:
        - setWeight: 10
        - pause: {} # Promotion manuelle avec `kubectl -n myapp-canary-staging argo rollouts promote myapp-canary`
        - setWeight: 30
        - pause: { duration: 60 } # Pause de 60 secondes
        - setWeight: 60
        - pause: { duration: 120 }
        - setWeight: 100
