myapps/myapp-canary/base/svc-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-canary
spec:
  selector:
    app: myapp-canary
  ports:
    - name: http
      port: 80
      targetPort: 8080
