myapps/myapp-canary/base/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-stable
spec:
  ingressClassName: nginx
  rules:
    - host: CHANGE-me.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-stable
                port:
                  number: 80
